[project]
name = "meafs"
version = "4.6.3"
authors = [
    { name="Matheus J. Castro" }
]
description="Multiple Element Abundance Fit Software"
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
 "Programming Language :: Python :: 3",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "astropy",
    "specutils",
    "scipy",
    "matplotlib",
    "pandas",
    "numpy",
    "desktop_file==1.3",
    "pathlib",
    "PyQt6",
    "dill"
]

[project.scripts]
meafs = "meafs_code.gui:main"
meafs-desktop-create = "meafs_code.desktop_entry:create"
meafs-desktop-remove = "meafs_code.desktop_entry:remove"

[project.urls]
"Homepage" = "https://github.com/MatheusJCastro/meafs"

