[project]
name = "meafs"
dynamic = ["version"]
authors = [
    { name="Matheus J. Castro" }
]
description="Multiple Element Abundance Fit Software"
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
 "Programming Language :: Python :: 3",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "astropy",
    "specutils",
    "scipy",
    "matplotlib",
    "pandas",
    "numpy",
    "desktop_file==1.3",
    "pathlib",
    "PyQt6",
    "dill",
    "qtconsole"
]

[project.scripts]
meafs = "meafs_code.gui:main"
meafs-desktop-create = "meafs_code.desktop_entry:create"
meafs-desktop-remove = "meafs_code.desktop_entry:remove"

[project.urls]
"homepage" = "https://meafs.readthedocs.io/"
"repository" = "https://github.com/MatheusJCastro/meafs"

[tool.setuptools.dynamic]
version = { attr = "meafs_code.__version__" }

