[project]
name = "meafs"
dynamic = ["version"]
authors = [
    { name="Matheus J. Castro" }
]
description="Multiple Element Abundance Fit Software"
readme = "README.md"
requires-python = ">=3.11"
classifiers=[
 "Programming Language :: Python :: 3",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "astropy>=5.3.1",
    "specutils>=1.17.0",
    "scipy>=1.11.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.0",
    "numpy>=1.24.4",
    "desktop_file==1.3",
    "pathlib>=1.0.1",
    "PyQt6>=6.7.1",
    "dill>=0.3.7",
    "qtconsole>=5.4.3"
]

[project.scripts]
meafs = "meafs_code.gui:main"
meafs-desktop-create = "meafs_code.desktop_entry:create"
meafs-desktop-remove = "meafs_code.desktop_entry:remove"

[project.urls]
"homepage" = "https://meafs.readthedocs.io/"
"repository" = "https://github.com/MatheusJCastro/meafs"

[tool.setuptools.dynamic]
version = { attr = "meafs_code.__version__" }

